--- a/week1/site/sytle.css
+++ b/week1/site/sytle.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,300&display=swap');
 header{
     top: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 5;
     background-color: black;
     display: flex;
     width: 100vw;
     height: 10vh;
+}
+
+p{
+    font-family: 'Merriweather Sans', sans-serif;
 }
 
 nav{
@@ -16,7 +21,7 @@ nav ul li{
     font-size: 2vh;
     margin-top: 2.5vh;
     display: inline-block;
-    margin: 2rem;
+    margin: 2vw;
 }
 
 nav ul li a{
@@ -36,8 +41,8 @@ main{
 }
 
 h2{
-    padding: 2rem;
-    font-size: 3rem;
+    padding: 2vw;
+    font-size: 3vh;
     text-align: center;
 }
 
@@ -58,20 +63,25 @@ h2{
 
 
 .wdw{
-    height: 100vh;
     background-color: #395723;
-    border-radius: 1rem;
+    border-radius: 1vh;
     margin-bottom: 2vh;
+    display: grid;
+}
+
+.wdw>h2{
+    grid-column: 1/4;
 }
 
 .info{
     width: 30vw;
     box-sizing: border-box;
     float: left;
-    border: 0.1rem solid black;
     margin-left: 1vw;
     margin-right: 1vw;
+    margin-bottom: 2vh;
 }
+
 
 .info .symbol{
     display: block;
@@ -82,18 +92,22 @@ h2{
 }
 
 .info p{
-    font-size: 2vh;
+    margin-top: 1.5vh;
+    font-size: 2.5vh;
     text-align: left;
     margin-left: 1vw;
+/*     font-weight: 600;*/
 }
 
 h3{
-    font-size: 2rem;
+    font-size: 3vh;
     text-align: center;
     margin-bottom: 2vh;
 }
 
 .carousel{
+    margin-top: 4vh;
+    display: block;
     position: relative;
     height: 40vh;
 }
@@ -107,9 +121,8 @@ h3{
 .slide > img{
     display: block;
     object-fit: cover;
-    margin-left: 0.5vw;
     width: 29vw;
-
+    height: 40vh;
 }
 
 .slide[data-active]{
@@ -130,12 +143,11 @@ h3{
 }
 
 .carousel-button.prev{
-
-    left: 1rem;
+    left: 1vw;
 }
 
 .carousel-button.next{
-    right: 1rem;
+    right: 1vw;
 }
 
 
@@ -144,28 +156,61 @@ h3{
     height: 50vh;
     background-color: #395723;
     margin-bottom: 2vh;
-    border-radius: 1rem;
+    border-radius: 1vh;
 }
 
 footer{
+    padding: 2vh;
+    padding-left: 15vw;
+    padding-right: 15vw;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
     box-sizing: border-box;
-    height: 30vh;
     background-color: black;
     color: white;
-    font-size: 3vh;
+    font-weight: 500;
+    font-size: 2.5vh;
+    padding-bottom: 2vh;
+}
+
+footer>h3{
+    grid-column: 1/2;
+    text-align: left;
+}
+
+.gegevens{
+    width: 35vw;
+    grid-row: 2/3;
 }
 
 .contact{
-    margin-top: 8vh;
-    margin-left: 1vw;
-    width: 48vw;
-    box-sizing: border-box;
-    float: left;
+    width: 35vw;
+    grid-row: 2/3;
+
 }
 
-.contact > .name{
-    text-align: center;
+
+@media screen and (max-width:700px) {
+    .info{
+        grid-column: 1/2;
+        width: 90vw;
+        margin-left: 3vw;
+    }
+    .slide > img{
+        width: 90vw;
+    }
+    .info .symbol{
+        width: 10vw;
+    }
+
+    footer>h3{
+        grid-column: 1/3;
+        text-align: center;
+    }
 }
+
+
 
 
 
