--- a/week3/templates/item.html
+++ b/week3/templates/item.html
@@ -2,32 +2,17 @@
 <head>
     <title>Item Details</title>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-    <script>
-        document.addEventListener("DOMContentLoaded", (event) => {
-          document.getElementById("myForm").addEventListener("submit", function (e) {
-            e.preventDefault(); // Cancel the default action
-            submitForm();
-          });
-        });
-      </script>
 </head>
 <body>
     <h1>{{ surveytitel }}</h1>
     {% for vraag in vragen %}
-    <form id=Myform action="/submitform/{{vraag.id}}" method="post">
+    <iframe name="hiddenFrame" class="hide"></iframe>
+
+    <form id=Myform action="/submitform/{{vraag.id}}" method="post" target="hiddenFrame">
     <p>{{vraag.vraag}}</p> <br>
     <input type="text" name="antwoord">
     <input type="submit">
     </form>
     {% endfor %}
-
-    <script>
-        document.addEventListener("DOMContentLoaded", (event) => {
-          document.getElementById("myForm").addEventListener("submit", function (e) {
-            e.preventDefault(); // Cancel the default action
-            submitForm();
-          });
-        });
-      </script>
 </body>
 </html>
